--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="container">
-      <h2 class="logo">  NETFLIX</h2>
+      <h2 class="logo">NETFLIX</h2>
       <nav>
         <a href="#">Início</a>
         <a href="#">Séries</a>
@@ -18,5 +18,16 @@
       </nav>
     </div>
   </header>
+
+  <main>
+    <div class="filme-principal">
+      <div class="container">
+        <h3 class="titulo">O Gambito da Rainha</h3>
+        <p class="descricao">Durante a Guerra Fria, em um orfanato do Kentucky, uma garota prodígio do xadrez luta contra o vício para se 
+          tornar a número um do mundo.</p>
+      </div>
+    </div>
+  </main>
+
 </body>
 </html>
