--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
         <p class="descricao">Durante a Guerra Fria, em um orfanato do Kentucky, uma garota prodígio do xadrez luta contra o vício para se 
           tornar a número um do mundo.</p>
       </div>
+
+      <button role="button" class="botao"><!--role especifica independente de on
+      de estiver executando que este elemento é um botao-->
+        ASSISTIR AGORA
+      </button>
+
+      <button role="button" class="botao">
+        MAIS INFORMAÇÕES
+      </button>
     </div>
   </main>
 
