--- a/index.html
+++ b/index.html
@@ -29,14 +29,17 @@
       <div class="botoes">
         <button role="button" class="botao"><!--role especifica independente de on
           de estiver executando que este elemento é um botao-->
+            <i class="fas fa-play"></i>
             ASSISTIR AGORA
           </button>
           <button role="button" class="botao">
+            <i class="fas fa-info-circle"></i>
             MAIS INFORMAÇÕES
           </button>
       </div>
     </div>
   </main>
 
+  <script src="https://kit.fontawesome.com/57462a1a55.js" crossorigin="anonymous"></script>
 </body>
 </html>
