--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style/main.css">
   <title>NETFLIX CLONE</title>
 </head>
+
 <body>
   <header>
     <div class="container">
@@ -23,12 +25,14 @@
     <div class="filme-principal">
       <div class="container">
         <h3 class="titulo">O Gambito da Rainha</h3>
-        <p class="descricao">Durante a Guerra Fria, em um orfanato do Kentucky, uma garota prodígio do xadrez luta contra o vício para se 
+        <p class="descricao">Durante a Guerra Fria, em um orfanato do Kentucky, 
+          uma garota prodígio do xadrez luta
+          contra o vício para se
           tornar a número um do mundo.</p>
-      </div>
-      <div class="botoes">
-        <button role="button" class="botao"><!--role especifica independente de on
-          de estiver executando que este elemento é um botao-->
+        <div class="botoes">
+          <button role="button" class="botao">
+            <!--role especifica independente de on
+              de estiver executando que este elemento é um botao-->
             <i class="fas fa-play"></i>
             ASSISTIR AGORA
           </button>
@@ -36,10 +40,14 @@
             <i class="fas fa-info-circle"></i>
             MAIS INFORMAÇÕES
           </button>
+        </div>
       </div>
     </div>
   </main>
 
-  <script src="https://kit.fontawesome.com/57462a1a55.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/57462a1a55.js" 
+    crossorigin="anonymous">
+  </script>
 </body>
+
 </html>
