--- a/index.html
+++ b/index.html
@@ -12,46 +12,51 @@
   <!--OWL css-->
   <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
   <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
-  
-  <title>NETFLIX CLONE</title>
+
+  <link rel="shortcut icon" href="img/among_us_player_red_icon_156942.ico">
+  <title>Netflix CLONE</title>
 </head>
 
 <body>
-  <header>
-    <div class="container">
-      <h2 class="logo">NETFLIX</h2>
-      <nav>
-        <a href="#">Início</a>
-        <a href="#">Séries</a>
-        <a href="#">Filmes</a>
-        <a href="#">Documentários</a>
-      </nav>
-    </div>
-  </header>
 
-  <main>
-    <div class="filme-principal">
+  <div class="principal">
+    <header>
       <div class="container">
-        <h3 class="titulo">O Gambito da Rainha</h3>
-        <p class="descricao">Durante a Guerra Fria, em um orfanato do Kentucky, 
-          uma garota prodígio do xadrez luta
-          contra o vício para se
-          tornar a número um do mundo.</p>
-        <div class="botoes">
-          <button role="button" class="botao">
-            <!--role especifica independente de on
+        <h2 class="logo">NETFLIX</h2>
+        <nav>
+          <a href="#">Início</a>
+          <a href="#">Séries</a>
+          <a href="#">Filmes</a>
+          <a href="#">Documentários</a>
+        </nav>
+      </div>
+    </header>
+
+    <main>
+      <div class="filme-principal">
+        <div class="container">
+          <h3 class="titulo">O Gambito da Rainha</h3>
+          <p class="descricao">Durante a Guerra Fria, em um orfanato do Kentucky,
+            uma garota prodígio do xadrez luta
+            contra o vício para se
+            tornar a número um do mundo.</p>
+          <div class="botoes">
+            <button role="button" class="botao">
+              <!--role especifica independente de on
               de estiver executando que este elemento é um botao-->
-            <i class="fas fa-play"></i>
-            ASSISTIR AGORA
-          </button>
-          <button role="button" class="botao">
-            <i class="fas fa-info-circle"></i>
-            MAIS INFORMAÇÕES
-          </button>
+              <i class="fas fa-play"></i>
+              Assistir
+            </button>
+            <button role="button" class="botao">
+              <i class="fas fa-info-circle"></i>
+              Mais Informações
+            </button>
+          </div>
         </div>
       </div>
-    </div>
-  </main>
+    </main>
+
+  </div>
 
   <div class="carrossel-filmes">
     <div class="owl-carousel owl-theme">
@@ -88,8 +93,7 @@
     </div>
   </div>
 
-  <script src="https://kit.fontawesome.com/57462a1a55.js" 
-    crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/57462a1a55.js" crossorigin="anonymous">
   </script>
   <script src="js/owl/jquery.min.js"></script>
   <script src="js/owl/owl.carousel.min.js"></script>
