--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
   <div class="principal">
     <header>
       <div class="container">
-        <h2 class="logo">NETFLIX</h2>
+        <!--<h2 class="logo">NETFLIX</h2>-->
+        <div>
+          <a href="#"><img class="logo-netflix" src="img/netflix.png" alt="NETFLIX"></a>
+        </div>
         <nav>
           <a href="#">Início</a>
           <a href="#">Séries</a>
